fixed issue with background image being offset to the right on mobile screens

--- a/client/src/Pages/App/App.css
+++ b/client/src/Pages/App/App.css
@@ -1,11 +1,10 @@
 .background {
-  height: 100vh;
-  width: 100vw;
-  top: 0;
-  left:0;
-  position: absolute;
+  height: calc(100%-64px);
+  width: 100%;
   background-image: url("/images/darkBackground.jpg");
-  background-repeat: unset;
+  background-size: cover;
+  background-attachment: fixed;
+  background-repeat: no-repeat;
 }
 
 .Home {
